# Dereference_pointers_C

./: CMakeLists.txt  README.md  run_bench.sh  run_demo.sh
benchmarks/: bench_to_csv.ps1  bench_to_csv.py
checker/: graph_eval.c  graph_eval.h
driver/: bench_graph_walk.c  bench_graph_walk_ssa.c  bench_triple_deref.c  bench_triple_deref_ssa.c  main.c
llvm_pass/: CMakeLists.txt  CollapseDerefsPass.cpp  GuardedGraphPass.cpp
programs/: kernels.c
runtime/: checked_ptr.c  checked_ptr.h  heap_gen.c  heap_gen.h
slides/: bench_results.tex  bench_to_tex.py  deck.tex  deck.vrb
viz/: bench_data.js  bench_data_ssa.js  index.html  script.js  style.css
